Fix #525: Fix of the modal dialog visibility with a preview of generated migration

--- a/src/assets/scss/bs4/_modal.scss
+++ b/src/assets/scss/bs4/_modal.scss
@@ -49,6 +49,9 @@
     transform: translate(0, 0);
   }
 }
+.modal.show {
+  opacity: 1;
+}
 
 .modal-dialog-centered {
   display: flex;
